--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -15,7 +15,7 @@
             <h2 class="text-center col-12 my-4">Lorem ipsum dolor sit amet, consectetur.</h2>
 
 
-            <p class="col-12 col-md-10 mx-auto text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dicta, ipsa libero maiores quis rerum sint? Assumenda, eligendi omnis! Ab alias amet asperiores blanditiis consectetur corporis deserunt dicta dolor doloribus eaque, eum fuga hic illum in magni maiores nihil nisi quam quod, reiciendis rem sapiente sed tempora, tenetur unde. Aliquid earum eos laudantium odit repellendus, sapiente sint sunt temporibus veritatis.</p>
+            <p class="col-12 col-md-10 mx-auto text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut commodi consequatur, cupiditate, dolor dolorum est, explicabo in iste mollitia natus necessitatibus odio officia possimus quasi quia quibusdam ratione reiciendis sed sequi soluta suscipit unde vel veritatis voluptate? Aperiam dolorem porro quo ut voluptas. Officiis omnis voluptas voluptatum.</p>
 
         </div>
 
@@ -29,10 +29,10 @@
 
         <div class="row mb-5">
 
-            <h2 class="text-center col-12 my-4">Lorem ipsum dolor sit amet, consectetur.</h2>
+            <h2 class="text-center col-12 my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
 
 
-            <p class="col-12 col-md-10 mx-auto text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dicta, ipsa libero maiores quis rerum sint? Assumenda, eligendi omnis! Ab alias amet asperiores blanditiis consectetur corporis deserunt dicta dolor doloribus eaque, eum fuga hic illum in magni maiores nihil nisi quam quod, reiciendis rem sapiente sed tempora, tenetur unde. Aliquid earum eos laudantium odit repellendus, sapiente sint sunt temporibus veritatis.</p>
+            <p class="col-12 col-md-10 mx-auto text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid consequatur dignissimos eum obcaecati praesentium. Assumenda dolores dolorum esse laboriosam, libero natus quod sapiente! Accusamus animi commodi, cumque eaque eligendi facere fugiat harum libero magni maxime, minus nesciunt nihil porro provident quas qui quisquam quo rerum totam ut? Alias, magnam!</p>
 
         </div>
 
