Ajout page de profils

--- a/templates/partials/_main_navbar.html.twig
+++ b/templates/partials/_main_navbar.html.twig
@@ -38,7 +38,16 @@
                         </a>
 
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                            <li>
+                                <a class="dropdown-item" href="{{ path('main_profil') }}">
+                                    <i class="fa-solid fa-user-gear"></i>
+                                    Mon profil
+                                </a>
+                            </li>
+
                             <li><hr class="dropdown-divider"></li>
+
                             <li>
                                 <a class="dropdown-item" href="{{ path('app_logout') }}">
                                     <i class="fa-solid fa-right-from-bracket"></i>
