--- a/templates/blog/publication_view.html.twig
+++ b/templates/blog/publication_view.html.twig
@@ -39,6 +39,11 @@
 
                             <div class="mt-3">
 
+                                <a href="{{ path('blog_publication_edit', {'id': article.id}) }}" class="text-decoration-none text-warning me-3">
+                                    <i class="fa-solid fa-pen-to-square me-1"></i>
+                                    Modifier
+                                </a>
+                                
                                 <a onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')" href="{{ path('blog_publication_delete', {'id': article.id, 'csrf_token' : csrf_token('blog_publication_delete_' ~ article.id)}) }}" class="text-decoration-none text-danger">
                                     <i class="fa-solid fa-trash-can"></i>
                                     Supprimer</a>
@@ -46,7 +51,7 @@
                             </div>
 
                         {% endif %}
-                        
+
                     </div>
 
                 </article>
